--- a/css/slide.css
+++ b/css/slide.css
@@ -4,12 +4,13 @@ html, body {
     overflow-y: visible;
 }
 .swiper {
+    padding-top: 120px !important;
     width: 640px;
     height: auto;
     margin: 0 auto;
     position: relative;
     overflow: visible;
-    z-index: 1;
+    z-index: 3;
     display: block;
     z-index: 10;
 }
