--- a/css/slide.css
+++ b/css/slide.css
@@ -59,10 +59,10 @@ html, body {
     margin-right: 14px;
 }
 .title {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
-    color: #000;
-    text-align: center;
+    color: #051d39;
+    text-align: left;
 }
 .slide-controls {
     display: flex;
