--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ header {
     display: flex;
     align-items: center;
     position: sticky;
-    z-index: 2;
+    z-index: 51;
   }
   .news-content {
     max-width: 80%;
@@ -69,23 +69,24 @@ header {
   
 
   .sidebar {
-    width: 70px; 
+    width: 56px; 
     color: #333;
     position: fixed; 
-    z-index: 6;
+    z-index: 30;
     height: 100%;
-    top: 30px; 
+    top: 32px; 
     left: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 2px 10px 52px;
+    background-color: #fff;
   }
 
   .sidebar a {
     text-decoration: none;
     color: white;
     font-size: 18px;
-    margin-bottom: 24px;
     text-align: center;
   }
 
@@ -111,7 +112,46 @@ header {
     justify-content: space-around;
     align-items: center;
   }
+  @media (max-width: 1138px) {
+    .navbar {
+      padding: 0 0 0 56px;
+    }
+    .container {
+      max-width: 100%;
+    }
+    .responsive-scroll {
+      max-width: 50% !important;
+    }
+    .contact-wrapper {
+      max-width: 85% !important;
+    }
+    
+  }
+  @media (max-width: 768px) {
+    .sidebar {
+      display: none !important;
+    }
+    .contayner {
+      max-width: 100%; 
+    }
+    .navbar {
+      padding: 0 !important;
+    }
+    
+  }
+  @media (max-width: 639px) {
+    #news-container {
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+    }
+  }
+  @media (min-width: 640px) and (max-width: 875px) {
+    .title-height {
+      height: 120px !important;
+    }
+  }
   
+
   .nav-links {
     display: flex;
     align-items: center;
