--- a/css/style.css
+++ b/css/style.css
@@ -266,3 +266,24 @@ header {
   display: none; 
 }
 
+@media (max-width: 1400px) {
+  .footer-wrapper {
+    max-width: 95% !important;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .setir {
+    flex-direction: column !important;
+  }
+}
+@media (min-width: 768px) and (max-width: 992px) {
+  .footer-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 768px) {
+  .setir {
+    flex-direction: row !important;
+    justify-content: space-around;
+  }
+}
